--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "vue": "^3.2.37",
+    "vue-request": "^1.2.4",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
